Grace/tests/gibbs/errors/t206.grace
// ERROR = P1037
var x is
